Added Patient domain model and CRUD functionality - Created Patient entity model extending User with additional patient-specific fields - Implemented PatientRepository, PatientService, and PatientController - Added CRUD operations for Patient entities - Integrated with existing exception handling mechanism

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=dentist
 spring.datasource.url=jdbc:mysql://localhost:3306/dentist_db
+spring.application.name=<name>
 spring.datasource.username=<username>
 spring.datasource.password=<password>
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
